Added mainClass and JVM Args to pom for Demo